Add operation, methods, reposnses to api spec Gneerate controller code
